--- a/.github/workflows/flashcardapp.yml
+++ b/.github/workflows/flashcardapp.yml
@@ -8,8 +8,7 @@ env:
  playstore_name: IIECat
 on:
 #Where release is written , must match your branch name, I would suggest
-cloning your branch at the end called release so it only builds the final code
-called release
+cloning your branch at the end called release so it only builds the final code called release
  push:
  branches:
   -  'release'
