--- a/.github/workflows/flashcardapp.yml
+++ b/.github/workflows/flashcardapp.yml
@@ -7,8 +7,7 @@ env:
  # The name of the Play Store
  playstore_name: IIECat
 on:
-#Where release is written , must match your branch name, I would suggest
-cloning your branch at the end called release so it only builds the final code called release
+#Where release is written , must match your branch name, I would suggest cloning your branch at the end called release so it only builds the final code called release
  push:
  branches:
   -  'release'
